# sdl-experiments

./: .gitignore  CMakeLists.txt  README.md
shaders/: imgui.frag  imgui.vert  triangle.frag  triangle.pipeline.json  triangle.vert  triangle.vert+triangle.frag.pipeline.json  triangle.vert.spv
src/: imgui_sdl3gpu.cpp  imgui_sdl3gpu.h  main.c  main.cpp  pipeline_config.cpp  pipeline_config.h  shader.h  shader_reflect.cpp  shader_reflect.h
